2020-05-27  David Kilzer  <ddkilzer@apple.com>

        Add OptionSetTraits<> and use with WebCore::DragDestinationAction
        <https://webkit.org/b/212397>

        Reviewed by Alex Christensen.

        Add OptionSetTraits<> (similar to EnumTraits<>) to define all
        valid values for a given enum type.  This allows us to use that
        bitmask with OptionSet<>::fromRaw() to clear undefined bits, and
        to validate enum values used with the OptionSet<> constructors.

        Note that the extra validation possible with OptionSetTraits<>
        is enabled based on the existence of that type using the new
        WTF::is_type_complete_v<> type trait.  Other OptionSet<> enums
        fall back to the original validation checks.

        Finally, typename <T> is changed to <E> for OptionSet<> to
        emphasize that it's an enum typename.

        * wtf/OptionSet.h:
        (WTF::is_type_complete_v): Add.
        (WTF::OptionSetTraits): Add.
        (WTF::OptionSetValues): Add.
        (WTF::OptionSetValueChecker): Add.
        (WTF::isValidOptionSetEnum): Add.
        (WTF::maskRawValue): Add.
        (WTF::OptionSet::Iterator::operator* const):
        (WTF::OptionSet::fromRaw):
        (WTF::OptionSet::OptionSet):
        (WTF::OptionSet::contains const):

2020-05-27  Michael Catanzaro  <mcatanzaro@gnome.org>

        -Wdeprecated-copy caused by Bitmap copy assignment operator
        https://bugs.webkit.org/show_bug.cgi?id=212421

        Reviewed by Mark Lam.

        This copy assignment operator is not needed, and causes warnings because we do not have a
        corresponding copy constructor. We could add a copy constructor, but it's easiest to just
        remove the copy assignment operator.

        * wtf/Bitmap.h:

2020-05-26  Darin Adler  <darin@apple.com>

        Sort PlatformEnableCocoa.h and add definitions for the simple cases from FeatureDefines.xcconfig
        https://bugs.webkit.org/show_bug.cgi?id=212389
