@@ -1,3 +1,13 @@
+2020-05-27  Saam Barati  <sbarati@apple.com>
+
+        Improve comments about OS/PLATFORM(IOS) and friends
+        https://bugs.webkit.org/show_bug.cgi?id=212438
+
+        Reviewed by Tim Horton.
+
+        * wtf/PlatformLegacy.h:
+        * wtf/PlatformOS.h:
+
 2020-05-27  David Kilzer  <ddkilzer@apple.com>
 
         Add OptionSetTraits<> and use with WebCore::DragDestinationAction
